don't force the scrollbar (fix for Firefox)

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -12,7 +12,7 @@ body {
     min-height: 150px;
     max-height: 500px;
     border-radius: 0.5em;
-    overflow: scroll;
+    overflow: auto;
     font-family: sans-serif;
     color: rgb(201, 209, 217);
     background-color: rgb(22, 27, 34);
